--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "@types/react": "16.9.1",
     "@types/react-dom": "16.8.5",
     "apollo-boost": "^0.4.4",
+    "dotenv": "^8.0.0",
     "graphql": "^14.4.2",
+    "graphql-tag": "^2.10.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.0",
-    "typescript": "3.5.3",
-    "dotenv": "^8.0.0"
+    "typescript": "3.5.3"
   },
   "scripts": {
     "start": "react-scripts start",
