--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/react": "16.9.1",
     "@types/react-dom": "16.8.5",
     "apollo-boost": "^0.4.4",
+    "apollo-cache-inmemory": "^1.6.3",
     "dotenv": "^8.0.0",
     "graphql": "^14.4.2",
     "graphql-tag": "^2.10.1",
