--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@apollo/react-hooks": "^3.0.0",
     "@types/dotenv": "^6.1.1",
     "@types/jest": "24.0.17",
+    "@types/jwt-decode": "^2.2.1",
     "@types/node": "12.7.1",
     "@types/react": "16.9.1",
     "@types/react-dom": "16.8.5",
@@ -14,6 +15,8 @@
     "dotenv": "^8.0.0",
     "graphql": "^14.4.2",
     "graphql-tag": "^2.10.1",
+    "jwt-decode": "^2.2.0",
+    "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.0",
