--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "16.9.1",
     "@types/react-dom": "16.8.5",
     "@types/react-router-dom": "^4.3.4",
+    "@types/showdown": "^1.9.3",
     "apollo-boost": "^0.4.4",
     "apollo-cache-inmemory": "^1.6.3",
     "apollo-client": "^2.6.4",
@@ -25,8 +26,10 @@
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-mde": "^7.6.2",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.0",
+    "showdown": "^1.9.0",
     "typescript": "3.5.3"
   },
   "scripts": {
