--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "@fortawesome/free-solid-svg-icons": "^5.10.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "@types/dotenv": "^6.1.1",
-    "@types/jest": "24.0.17",
+    "@types/enzyme": "^3.10.4",
+    "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/jwt-decode": "^2.2.1",
-    "@types/node": "12.7.1",
     "@types/react": "16.9.1",
     "@types/react-dom": "16.8.5",
     "@types/react-router-dom": "^4.3.4",
@@ -30,13 +30,12 @@
     "react-mde": "^7.6.2",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.0",
-    "showdown": "^1.9.0",
-    "typescript": "3.5.3"
+    "showdown": "^1.9.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -55,18 +54,29 @@
     ]
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.8.3",
+    "@babel/preset-react": "^7.8.3",
+    "@types/jest": "^24.9.0",
+    "@types/node": "^12.7.1",
     "@types/prop-types": "^15.7.1",
     "@typescript-eslint/eslint-plugin": "^1.13.0",
     "@typescript-eslint/parser": "^1.13.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
     "eslint-config-airbnb": "^18.0.0",
     "eslint-config-airbnb-typescript": "^4.0.1",
     "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-json": "^2.0.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.14.3",
     "gulp": "^4.0.2",
     "gulp-eslint": "^6.0.0",
     "gulp-load-plugins": "^2.0.1",
-    "husky": "^3.0.3"
+    "husky": "^3.0.3",
+    "jest": "^24.9.0",
+    "jest-css-modules": "^2.1.0",
+    "ts-jest": "^24.3.0",
+    "typescript": "^3.7.5"
   },
   "husky": {
     "hooks": {
